--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -1,4 +1,4 @@
-{% extends "shop/nav.html" %}
+{% extends "shop/base.html" %}
 {% load i18n static %}
 {% block title %}{% translate "Pay your order" %}{% endblock %}
 
